# 3dGame

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
assets/models/: castle.glb
docs/: architecture.md  assets.md  development.md  model-export-guide.md  plan.md
src/: lib.rs  main.rs
src/core/: input.rs  mod.rs
src/core/camera/: collision.rs  follow.rs  mod.rs
src/gameplay/: health.rs  mod.rs
src/gameplay/ai/: components.rs  mod.rs  state_machine.rs
src/gameplay/combat/: components.rs  hit.rs  mod.rs  stamina.rs  system.rs
src/gameplay/player/: animation.rs  components.rs  dodge.rs  mod.rs  movement.rs
src/states/: mod.rs
src/visual/: health_bar.rs  mod.rs  particles.rs
